2013-05-24  Daniel Willmann
        * Fix srv->start_time (initialization missing). So now 
          ecore_con_server_uptime_get() is working for plain TCP connections.

2013-05-24  Guillaume Friloux
        * Fix use of ecore_con_server_client_limit_set() (counter never
          decreased).
        * Fix use of ecore_con_client_timeout_set() and
          ecore_con_server_timeout_set() that makes timeout on connections
          even if you sent data.
        * Fix cl->start_time (initialization missing). So now 
          ecore_con_client_uptime_get() is working.

2013-05-22  Daniel Juyung Seo (SeoZ)

        * Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.

2013-05-22  ChunEon Park (Hermet)

        * Edje textblock: keep the text styles when new font by the text class is applied.

2013-05-16  Tom Hacohen

        * Edje textblock: Fixed issue with quoted formats.

2013-05-14  Jihoon Kim

        * Edje entry: return surrounding string until the start position of selection
        * ecore_imf: fix crash when ecore_imf_context_del is called in ecore_imf_context_input_panel_callback_call

2013-05-13  Thiep Ha

        * Edje: Added selection handlers to entry.

2013-05-11  Jiyou Park

        * Evas: Fix crash if app use native surface in wrong engine.

2013-05-10  Tom Hacohen

        * Evas text: Fixed line size calculation when using multiple
	fonts.

2013-05-10  ChunEon Park (Hermet)

        * Evas: don't try blend on gl backened if the render option is COPY

2013-05-08  Mike Blumenkrantz

        * Edje: fix custom states for proxy parts
        * Edje: add embryo fill support for proxy parts

2013-05-07  Rafael Antognolli

        * Evas: Added evas_event_input_multi_up/down().

2013-05-06  Rafael Antognolli

        * Ecore/Wayland: Add ecore_wl_window_alpha_set/get().
        * Ecore/Wayland: Fix alpha windows on EGL backend.

2013-05-06  Cedric Bail

        * Evas: Remove SVG loader from inside the merged tree.
