@@ -263,7 +263,8 @@ typedef enum
    ECORE_IMF_INPUT_PANEL_LAYOUT_INVALID,         /**< Never use this */
    ECORE_IMF_INPUT_PANEL_LAYOUT_HEX,             /**< Hexadecimal layout @since 1.2 */
    ECORE_IMF_INPUT_PANEL_LAYOUT_TERMINAL,        /**< Command-line terminal layout including ESC, Alt, Ctrl key, so on (no auto-correct, no auto-capitalization) @since 1.2 */
-   ECORE_IMF_INPUT_PANEL_LAYOUT_PASSWORD         /**< Like normal, but no auto-correct, no auto-capitalization etc. @since 1.2 */
+   ECORE_IMF_INPUT_PANEL_LAYOUT_PASSWORD,        /**< Like normal, but no auto-correct, no auto-capitalization etc. @since 1.2 */
+   ECORE_IMF_INPUT_PANEL_LAYOUT_DATETIME         /**< Date and time layout @since 1.8 */
 } Ecore_IMF_Input_Panel_Layout;
 
 /**
