@@ -1,3 +1,8 @@
+2013-05-27  Jihoon Kim (jihoon)
+
+        * Add ECORE_IMF_INPUT_PANEL_LAYOUT_DATETIME layout
+        * Add EDJE_INPUT_PANEL_LAYOUT_DATETIME layout
+
 2013-05-24  Daniel Willmann
         * Fix srv->start_time (initialization missing). So now 
           ecore_con_server_uptime_get() is working for plain TCP connections.
